[build-system]
requires = ["setuptools", "wheel"]

[tool.poetry]
name = "datamaps"
version = "1.0.6"
homepage = "https://github.com/hammerheadlemon/datamaps"
repository = "https://github.com/hammerheadlemon/datamaps"
license = "MIT"
readme = "README.md"
description = "Collect and clean data using Excel spreadsheets."
authors = ["Matthew Lemon <matt@matthewlemon.com>"]

[tool.poetry.dependencies]
python = "^3.7.0"
python-dateutil = "^2.8.1"
click = "^7.1.2"
bcompiler-engine = "^1.0.7"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
pytest-cov = "^2.7.1"
coverage = "^5.1"
nox = "^2019.11.9"
pyinstaller = "^3.6"
wheel = "^0.34.2"
pefile = "^2019.4.18"
pywin32-ctypes = "^0.2.0"

[tools.black]
max-length-length=88
